force-app/main/default/objects/Teacher__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <inlineHelpText>Please mention your designation</inlineHelpText>
    <label>Designation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>