force-app/main/default/objects/Teacher__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Teacher Email Id</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>