force-app/main/default/objects/Teacher__c/fields/Teacher_Id_Emp_ID__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Id_Emp_ID__c</fullName>
    <inlineHelpText>Please Enter Your Emp ID</inlineHelpText>
    <label>Teacher Id (Emp ID)</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>